--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -86,6 +86,10 @@ body {
     padding: 2rem 1rem;
     text-align: center;
   }
+
+  .section-title {
+    font-size: 1.5rem;
+  }
   
   .product-section h2 {
     text-align: left;
@@ -104,6 +108,7 @@ body {
   }
   
   .product-card {
+    margin-bottom: 2rem;
     background: white;
     padding: 1rem;
     width: 217px;
@@ -154,6 +159,11 @@ body {
   }
   
   /*view all button*/
+  .view-all-container {
+    margin-top: 2rem;
+    text-align: center;
+  }
+  
   .view-all {
     margin-top: 2rem;
     padding: 0.5rem 1.5rem;
@@ -163,6 +173,7 @@ body {
     cursor: pointer;
     font-weight: bold;
     transition: opacity 0.2s ease;
+    text-decoration: none;
   }
   
   .desktop-section .view-all {
@@ -406,3 +417,14 @@ body {
   .disclaimer-button:hover {
     background-color: #373737;
   }
+
+  .product-card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+  }
+  
+  .product-card-link:hover {
+    text-decoration: none;
+  }
+  
